--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.3",
+    "@angular/animations": "^10.0.3",
     "@angular/cdk": "^10.0.1",
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
     "ng2-truncate": "^1.3.17",
+    "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
